--- a/climb-blog-front/package.json
+++ b/climb-blog-front/package.json
@@ -16,7 +16,8 @@
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "commitmsg": "validate-commit-msg"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -32,5 +33,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "husky": "^3.1.0",
+    "validate-commit-msg": "^2.14.0"
+  },
+  "hooks": {
+    "pre-commit": "npm run commitmsg"
   }
 }
