--- a/climb-blog-server/package.json
+++ b/climb-blog-server/package.json
@@ -15,6 +15,7 @@
     "koa-bodyparser": "^4.2.1",
     "koa-json-error": "^3.1.2",
     "koa-parameter": "^3.0.1",
-    "koa-router": "^7.4.0"
+    "koa-router": "^7.4.0",
+    "koa-static": "^5.0.0"
   }
 }
